# ghack-genmedia

./: .env.example  .gitignore  1-brand-definition.py  GEMINI.md  README.md  app.py  brand.md  challenge1.md  challenge2.md  config.py  generate_ad_copy.py  generate_images.py  generate_new_scenes.py  generate_product.py  generate_protagonist.py  generate_videos.py  image-generation-example.py  pyproject.toml  requirements.txt  sprints.md
ad-copy/: 1-testimonial-ad-copy.md  10-emotional-story-ad-copy.md  2-seasonal-holiday-promotion-ad-copy.md  3-pain-point-ad-copy.md  4-discount-sale-ad-copy.md  5-fomo-ad-copy.md  6-feature-benefit-ad-copy.md  7-social-proof-ad-copy.md  8-authentic-story-ad-copy.md  9-suspenseful-story-ad-copy.md
generated-scenes/11-pain-point-ad-scene/: prompts.md
generated-scenes/12-testimonial-ad-scene/: prompts.md
prompts/: ad-copy.md  story-telling.md
prompts-images/: generate_prompts.py  nano-banana.md  success-criteria.md
prompts-images/1-testimonial-ad-copy-scene/: prompts.md
prompts-images/10-emotional-story-ad-copy-scene/: prompts.md
scenes/: 1-testimonial-ad-copy-scene.md  10-emotional-story-ad-copy-scene.md  2-seasonal-holiday-promotion-ad-copy-scene.md  3-pain-point-ad-copy-scene.md  4-discount-sale-ad-copy-scene.md  5-fomo-ad-copy-scene.md  6-feature-benefit-ad-copy-scene.md  7-social-proof-ad-copy-scene.md  8-authentic-story-ad-copy-scene.md  9-suspenseful-story-ad-copy-scene.md  scene-example.md
tests/: test_generate_ad_copy.py  test_generate_new_scenes.py  test_generate_videos.py
(+8 files in other folders)
